# sapoty-net-web

./: Cargo.toml  Makefile.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
src/: lib.rs
src/post/: create.rs
src/user/: create.rs  detail.rs  list.rs  mod.rs  update.rs
