[package]
name = "rust-frontend-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.45"
serde = {version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
wasm-bindgen = "0.2.78"
yew = "0.18.0"
yew-router = "0.15.0"
common = { version = "0.1.0", path = "./common" }
js-sys = "0.3.55"
gloo-file = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = ["File"]